--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URL='mongodb+srv://dummyuser:dummyuser123@cluster0.60xbme3.mongodb.net/?retryWrites=true&w=majority'
+JWT_SECRET='somesuperhardstringtoguess'
 PORT=3001
